--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
@@ -32,13 +33,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.4.1",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2"
