--- a/src/app/api/campaigns/requirements.txt
+++ b/src/app/api/campaigns/requirements.txt
@@ -1,7 +1,5 @@
-fastapi
-uvicorn
-python-multipart
-supabase
-python-dotenv
-psycopg2-binary
-aiofile
+fastapi==0.104.1
+uvicorn==0.24.0
+supabase==2.0.0
+python-dotenv==1.0.0
+python-multipart==0.0.6
