fix domain name from borderx.net to cricher.ai in CORS and website reachout display

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -30,8 +30,8 @@ env_variables:
   TIKTOK_TCM_ACCOUNT_ID: "7491077961832202247"
   
   # App URLs
-  NEXT_PUBLIC_APP_URL: "https://borderx.net"
-  NEXTAUTH_URL: "https://borderx.net"
+  NEXT_PUBLIC_APP_URL: "https://cricher.ai"
+  NEXTAUTH_URL: "https://cricher.ai"
   
   # FastAPI Configuration
   API_TITLE: "Campaign API"
