--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.474.0",
-    "next": "^15.4.3",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "prisma": "^6.4.1",
@@ -55,7 +55,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.24.0",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.5.9",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
